configuration/gitlab/repos/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mb-sdk
  name: mb-sdk-svc
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    app: mb-sdk
  type: ClusterIP
